// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InMemoryHandler + KeypairHandler Encrypts a string 1`] = `
Object {
  "meta": Object {
    "datetime": Any<Number>,
    "key": "imh",
    "serializer": "InMemoryHandler",
    "version": 1,
  },
  "payload": Any<String>,
}
`;

exports[`InMemoryHandler + PasswordHandler Encrypts a string 1`] = `
Object {
  "meta": Object {
    "datetime": Any<Number>,
    "key": "imh",
    "serializer": "InMemoryHandler",
    "version": 1,
  },
  "payload": Any<String>,
}
`;

exports[`LocalStorageHandler + KeypairHandler Encrypts a string 1`] = `
Object {
  "meta": Object {
    "datetime": Any<Number>,
    "key": "lsh",
    "serializer": "LocalStorageHandler",
    "version": 1,
  },
  "payload": Any<String>,
}
`;

exports[`LocalStorageHandler + PasswordHandler Encrypts a string 1`] = `
Object {
  "meta": Object {
    "datetime": Any<Number>,
    "key": "lsh",
    "serializer": "LocalStorageHandler",
    "version": 1,
  },
  "payload": Any<String>,
}
`;

exports[`SessionStorageHandler + KeypairHandler Encrypts a string 1`] = `
Object {
  "meta": Object {
    "datetime": Any<Number>,
    "key": "ssh",
    "serializer": "SessionStorageHandler",
    "version": 1,
  },
  "payload": Any<String>,
}
`;

exports[`SessionStorageHandler + PasswordHandler Encrypts a string 1`] = `
Object {
  "meta": Object {
    "datetime": Any<Number>,
    "key": "ssh",
    "serializer": "SessionStorageHandler",
    "version": 1,
  },
  "payload": Any<String>,
}
`;
